--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,44 @@
 @import "./base";
 @import "./components";
 @import "./layout";
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    height: 50px;
+    padding: 0 30px;
+    background-color: orange;
+    position: fixed;
+    width: 100%;
+    align-items: center;
+
+    div {
+        transform: rotate(-5deg);
+    }
+
+    .logo {
+        font-family: $font-cursive;
+        font-size: 30px;
+    }
+
+
+    .navList {
+        font-size: 20px;
+
+    }
+
+    .listItem {
+        display: inline-block;
+        list-style-type: none;
+        padding: 0 20px;
+        a:hover {
+            color: $color-alt;
+        }
+    }
+
+}
+
+body {
+    height: 180vh;
+    background-color: $color-primary;
+}
