--- a/style.scss
+++ b/style.scss
@@ -5,37 +5,122 @@
 .navbar {
     display: flex;
     justify-content: space-between;
-    height: 50px;
-    padding: 0 30px;
     background-color: orange;
     position: fixed;
     width: 100%;
     align-items: center;
+    line-height: 1;
 
-    div {
+    .div-logo {
         transform: rotate(-5deg);
+        padding: 1rem 1rem;
     }
 
     .logo {
         font-family: $font-cursive;
-        font-size: 30px;
+        font-size: 1.9rem;
     }
 
 
     .navList {
-        font-size: 20px;
-
+        font-size: 1.3rem;
+        margin: 0;
     }
 
     .listItem {
         display: inline-block;
         list-style-type: none;
-        padding: 0 20px;
+        padding: 10px 10px;
+
         a:hover {
             color: $color-alt;
         }
     }
 
+    .menu {
+        border: solid 0.25px $color-white;
+        padding: 5px;
+        border-radius: 6px;
+        display: none;
+    }
+
+    .menu-line {
+        height: 3px;
+        width: 20px;
+        background-color: $color-white;
+        margin: 3px auto;
+    }
+}
+
+@media all and (max-width: 490px) {
+    .navbar {
+        flex-direction: column;
+
+        .menu {
+            display: block;
+            position: absolute;
+            right: 1rem;
+            top: 1rem;
+        }
+
+        .menu:hover {
+            cursor: pointer;
+        }
+
+        .navList {
+            width: 100%;
+            display: none;
+        }
+
+        .listItem {
+            display: block;
+            border-top: 1px solid $color-white;
+            width: 100%;
+            text-align: center;
+        }
+
+        .div-logo {
+            width: 100%;
+            margin-bottom: 24px;
+            padding: 0;
+        }
+
+        .active {
+            display: block;
+        }
+    }
+}
+/* tablet media query breakpoint */
+
+@media all and (min-width: 768px) {
+    .navbar .navList {
+        font-size: 1.6rem;
+    }
+
+    .navbar .logo {
+        font-size: 2.4rem;
+    }
+
+    .navbar .listItem {
+        padding: 10px 24px;
+    }
+}
+
+
+/* desktop media query breakpoint */
+
+@media all and (min-width: 1024px) {
+    .navbar .navList {
+        font-size: 2rem;
+    }
+
+    .navbar .logo {
+        font-size: 3.25rem;
+    }
+
+    .navbar .listItem {
+        padding: 10px 36px;
+    }
 }
 
 body {
