--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ a:visited {
 .navbar {
   display: flex;
   justify-content: space-between;
-  background-color: orange;
   position: fixed;
   width: 100%;
   align-items: center;
@@ -55,6 +54,7 @@ a:visited {
   margin: 3px auto;
 }
 
+/* mobile phone breakpoint */
 @media all and (max-width: 490px) {
   .navbar {
     flex-direction: column;
@@ -115,6 +115,43 @@ a:visited {
     padding: 10px 36px;
   }
 }
+.header {
+  border: 1em solid red;
+  display: flex;
+  height: 80vh;
+  justify-content: center;
+  align-items: center;
+}
+.header .intro {
+  text-align: center;
+  margin-top: 8rem;
+}
+.header .intro__heading {
+  font-family: "Seymour One", sans-serif;
+  font-size: 1.3rem;
+}
+.header .intro__subheading {
+  font-family: "Caveat", cursive;
+  font-size: 1.7rem;
+}
+.header .intro__icon-div {
+  font-size: 1.5rem;
+  margin-top: 240px;
+}
+.header .intro__icon {
+  display: block;
+  margin-top: 10px;
+}
+
+#shuttle {
+  transform: rotate(90deg);
+}
+
+.title-img {
+  width: 100%;
+  height: auto;
+}
+
 body {
   height: 180vh;
   background-color: #014D64;
