Gave navbar opaque background color wbich activates upon scroll

--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ a:visited {
   width: 100%;
   align-items: center;
   line-height: 1;
+  transition: ease-in-out 0.3s;
+  z-index: 2;
 }
 .navbar .div-logo {
   transform: rotate(-5deg);
@@ -54,6 +56,11 @@ a:visited {
   margin: 3px auto;
 }
 
+.nav-active {
+  background-color: rgba(1, 77, 100, 0.9);
+  transition: ease-in-out 0.3s;
+}
+
 /* mobile phone breakpoint */
 @media all and (max-width: 490px) {
   .navbar {
@@ -75,8 +82,10 @@ a:visited {
   .navbar .listItem {
     display: block;
     border-top: 1px solid #ede7e3;
-    width: 100%;
     text-align: center;
+  }
+  .navbar .listItem:last-child {
+    border-bottom: 1px solid #ede7e3;
   }
   .navbar .div-logo {
     width: 100%;
@@ -108,7 +117,7 @@ a:visited {
   }
 
   .navbar .logo {
-    font-size: 3.25rem;
+    font-size: 3rem;
   }
 
   .navbar .listItem {
@@ -116,15 +125,15 @@ a:visited {
   }
 }
 .header {
-  border: 1em solid red;
   display: flex;
-  height: 80vh;
+  height: 110vh;
   justify-content: center;
   align-items: center;
+  background-image: url(/imgs/casey-horner-mPnxwQBtUZE-unsplash.jpg);
+  background-size: cover;
 }
 .header .intro {
   text-align: center;
-  margin-top: 8rem;
 }
 .header .intro__heading {
   font-family: "Seymour One", sans-serif;
@@ -136,23 +145,19 @@ a:visited {
 }
 .header .intro__icon-div {
   font-size: 1.5rem;
-  margin-top: 240px;
+  margin-top: 70%;
 }
 .header .intro__icon {
   display: block;
-  margin-top: 10px;
+  margin-top: 5%;
 }
 
 #shuttle {
   transform: rotate(90deg);
-}
-
-.title-img {
-  width: 100%;
-  height: auto;
+  z-index: 1;
 }
 
 body {
   height: 180vh;
-  background-color: #014D64;
+  background-color: #014d64;
 }
