--- a/_base.scss
+++ b/_base.scss
@@ -4,13 +4,16 @@ $font-body: "Lato", sans-serif;
 $font-display: "Seymour One", sans-serif;
 $font-cursive: "Caveat", cursive;
 
-$color-primary: #014D64;
+$color-primary: #014d64;
 $color-secondary: #0296A5;
 $color-tertiary: #0A4F57;
 $color-alt: #AE3C57;
 $color-highlight: #E75F73;
+
 $color-white: #ede7e3;
 $color-black: #1C1A1D;
+
+$color-opaque: rgb(1, 77, 100, .9);
 
 * {
     margin: 0;
