Added About and Projects section

--- a/_base.scss
+++ b/_base.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Lato:wght@400;700&family=Seymour+One&display=swap');
 
-$font-body: "Lato", sans-serif;
-$font-display: "Seymour One", sans-serif;
-$font-cursive: "Caveat", cursive;
+$font-body: "Lato", sans-serif;   /* @ 400 & 700 */
+$font-display: "Seymour One", sans-serif;   /* @ one-size */
+$font-cursive: "Caveat", cursive;   /* @ 700 */
 
 $color-primary: #014d64;
 $color-secondary: #0296A5;
@@ -11,7 +11,7 @@ $color-alt: #AE3C57;
 $color-highlight: #E75F73;
 
 $color-white: #ede7e3;
-$color-black: #1C1A1D;
+$color-black: #161010;
 
 $color-opaque: rgb(1, 77, 100, .9);
 
@@ -20,6 +20,7 @@ $color-opaque: rgb(1, 77, 100, .9);
     padding: 0;
     box-sizing: border-box;
     font-family: $font-body;
+    font-size: 1.1rem;
     color: $color-white;
 }
 
@@ -27,4 +28,8 @@ a:link,
 a:visited {
     text-decoration: none;
     color: unset;
+}
+
+p {
+    margin: 0;
 }
