--- a/style.css
+++ b/style.css
@@ -240,6 +240,15 @@ p {
   background-color: #AE3C57;
   border-radius: 100%;
   border: solid 2px #E75F73;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.img-circ {
+  border-radius: 100%;
+  width: 90%;
+  height: 90%;
 }
 
 .icon {
