--- a/_layout.scss
+++ b/_layout.scss
@@ -5,7 +5,6 @@
     justify-content: center;
     padding: 55% 5% 0;
     background-image: url(/imgs/casey-horner-mPnxwQBtUZE-unsplash.jpg);
-    background-size: cover;
+    background-size: 100% 100%;
     
-
 }
