--- a/style.scss
+++ b/style.scss
@@ -138,18 +138,147 @@
 /* desktop media query breakpoint */
 
 @media all and (min-width: 1024px) {
+
+    .header {
+        padding-top: 20%;
+    }
+
+    i {
+        font-size: 90%;
+    }
+
+    .heading {
+        font-size: 2.2rem;
+        padding-left: 5%;
+        text-align: left;
+    }
+
+    .img-div {
+        height: 300px;
+        width: 300px;
+        border: solid 3px $color-highlight;
+    }
+
     .navbar {
 
-        &__navList {
-            font-size: 2rem;
-        }
-
         &__logo {
-            font-size: 3rem;
+            font-size: 1.75rem;
         }
 
         &__listItem {
-            padding: 10px 36px;
+            padding: 10px 24px;
+        }
+    }
+
+    .intro {
+
+        &__heading {
+            font-size: 120%;
+        }
+
+        &__subheading {
+            font-size: 120%;
+        }
+
+        &__icon-div {
+            margin-top: 14%;
+        }
+    }
+
+    .about {
+
+        &__title-con {
+            padding-top: 10%;
+            padding-bottom: 3%;
+            justify-content: left;
+        }
+
+        &__img-div {
+            margin-top: 8%;
+            left: 60%;
+        }
+
+        &__text-container {
+            padding: 1% 40% 20% 5%;
+            text-align: left;
+        }
+
+        &__text {
+            font-size: 1.1rem;
+        }
+
+        &__icon-div {
+            font-size: 2rem;
+            position: absolute;
+            margin: 12% auto 0;
+            left: 0;
+            right: 0;
+            text-align: center;
+        }
+
+        &__icon {
+            padding: 4%;
+        }
+    }
+
+    .projects {
+
+        text-align: left;
+
+        &__heading {
+            padding-top: 10%;
+        }
+    }
+
+    .project-card {
+        padding: 5% 5%;
+        display: flex;
+
+        &__img-div {
+            margin: 0;
+            flex-shrink: 0;
+        }
+
+        &__container {
+            display: flex;
+            flex-wrap: wrap;
+            padding-left: 10%;
+        }
+
+        &__heading {
+            margin-bottom: 5%;
+        }
+
+        &__text {
+            font-size: 1.1rem;
+        }
+
+    }
+
+    .project-card:nth-child(3) {
+        flex-direction: row-reverse;
+        padding-bottom: 0;
+
+        .project-card__container:nth-of-type(2) {
+            padding-right: 10%;
+            padding-left: 0;
+        }
+    }
+
+    .project-card:nth-child(5) {
+        padding-top: 0;
+    }
+
+
+    .footer {
+        background-color: $color-tertiary;
+
+        &__icon-div {
+            font-size: 90%;
+        }
+
+        &__text {
+            font-size: 1.1rem;
         }
     }
 }
