Added links to social icons and removed hover colour on logo.

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
   list-style-type: none;
   padding: 10px 10px;
 }
-.navbar a:hover {
+.navbar__listItem a:hover {
   color: #AE3C57;
 }
 .navbar__menu {
