--- a/_components.scss
+++ b/_components.scss
@@ -54,7 +54,7 @@
     transition: ease-in-out 0.3s;
 }
 
-/* Intro / Landing Page */ 
+/* Intro / Landing Page */
 
 .intro {
     text-align: center;
@@ -70,7 +70,7 @@
     }
 
     &__icon-div {
-        margin-top: 80%;
+        margin-top: 70%;
 
     }
 
@@ -160,18 +160,27 @@
 
     &__icon-div {
         width: 100%;
+        padding: 3% 0;
     }
 
     &__icon {
         color: $color-highlight;
-        padding: 3% 5%;
     }
+
+    &__link {
+        font-size: 1.5rem;
+        margin: 0 5%;
+
+        i:hover {
+            color: $color-white;
+        }
+    }
+
 
     &__text {
         color: $color-highlight;
         padding-bottom: 2%;
     }
-
 }
 
 /* General Classes for Elements */
@@ -200,12 +209,7 @@
 
 
 
-.wave-blue {
-    vertical-align: top;
-    background-color: $color-secondary;
-}
-
-.wave-green {
+.wave {
     vertical-align: top;
     background-color: $color-secondary;
 }
