--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ body {
 /* Intro / Landing Page */
 .intro {
   text-align: center;
+  margin-top: 50%;
 }
 .intro__heading {
   font-size: 100%;
@@ -90,7 +91,7 @@ body {
   font-size: 133%;
 }
 .intro__icon-div {
-  margin-top: 70%;
+  margin-top: 75%;
 }
 .intro__icon {
   display: block;
@@ -211,13 +212,16 @@ body {
   display: flex;
   height: 110vh;
   justify-content: center;
-  padding: 55% 5% 0;
   background-image: url(/imgs/casey-horner-mPnxwQBtUZE-unsplash.jpg);
   background-size: 100% 100%;
 }
 
 /* mobile phone breakpoint */
 @media all and (max-width: 490px) {
+  .intro {
+    margin-top: 50%;
+  }
+
   .navbar {
     flex-direction: column;
   }
@@ -257,10 +261,6 @@ body {
     font-size: 1.3rem;
   }
 
-  .header {
-    padding-top: 50%;
-  }
-
   i {
     font-size: 140%;
   }
@@ -282,6 +282,9 @@ body {
     padding: 10px 24px;
   }
 
+  .intro {
+    margin-top: 40%;
+  }
   .intro__heading {
     font-size: 150%;
   }
@@ -319,10 +322,6 @@ body {
 }
 /* desktop media query breakpoint */
 @media all and (min-width: 1024px) {
-  .header {
-    padding-top: 20%;
-  }
-
   i {
     font-size: 90%;
   }
@@ -346,6 +345,9 @@ body {
     padding: 10px 24px;
   }
 
+  .intro {
+    margin-top: 15%;
+  }
   .intro__heading {
     font-size: 120%;
   }
