--- a/style.scss
+++ b/style.scss
@@ -2,10 +2,14 @@
 @import "./components";
 @import "./layout";
 
-
 /* mobile phone breakpoint */
 
 @media all and (max-width: 490px) {
+
+    .intro {
+        margin-top: 50%;
+    }
+
     .navbar {
         flex-direction: column;
 
@@ -55,10 +59,6 @@
         font-size: 1.3rem;
     }
 
-    .header {
-        padding-top: 50%;
-    }
-
     i {
         font-size: 140%;
     }
@@ -85,6 +85,8 @@
     }
 
     .intro {
+
+        margin-top: 40%;
 
         &__heading {
             font-size: 150%;
@@ -139,10 +141,6 @@
 
 @media all and (min-width: 1024px) {
 
-    .header {
-        padding-top: 20%;
-    }
-
     i {
         font-size: 90%;
     }
@@ -171,6 +169,8 @@
     }
 
     .intro {
+
+        margin-top: 15%;
 
         &__heading {
             font-size: 120%;
