--- a/_components.scss
+++ b/_components.scss
@@ -1,3 +1,5 @@
+@use "./variables" as *;
+
 /* navbar */
 
 .navbar {
@@ -12,7 +14,7 @@
 
     &__div-logo {
         transform: rotate(-5deg);
-        padding: 1rem 1rem;
+        padding: 1rem;
     }
 
     &__logo {
@@ -27,7 +29,7 @@
     &__listItem {
         display: inline-block;
         list-style-type: none;
-        padding: 10px 10px;
+        padding: 10px;
 
         a:hover {
             color: $color-alt;
@@ -132,7 +134,7 @@
 }
 
 .project-card {
-    padding: 10% 10%;
+    padding: 10%;
 
     &__img-div {
         margin: 10% auto;
